--- a/project/src/app/globals.css
+++ b/project/src/app/globals.css
@@ -25,7 +25,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("/Meteor.svg");
+  background-image: url("/Meteor2.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
